add github to footer

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <script src="scripts/blocks.js"></script>         
     </body>
     <footer>
+        <p>Code in <a href="https://github.com/buddylasta/block-info" target="_blank">Github<a></p>
         <p>Created by <a href="https://buddylasta.com/" target="_blank">Buddylasta<a></p>
         <p>Powered by <a href="https://github.com/Blockstream/esplora/blob/master/API.md" target="_blank">Blockstream API</a></p>
     </footer>
