checking logs for firefox browser

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <input type="radio" name="rotate-cube-side" value="bottom" /> bottom
             </label>
         </p>
-        <p>Spin it any way you want. The block height is etched into the timechain!</p>
+        <p>Spin it any way you want...the block height is etched into the timechain!</p>
 
         <hr>
 
