open link in other tab

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <h2>Height of Last Block</h2> 
-        <p>Returns the <a href="https://youtu.be/Uv27DCEHaIA?t=791">height</a> of the last block</p>
+        <p>Returns the <a href="https://youtu.be/Uv27DCEHaIA?t=791" target="_blank">height</a> of the last block</p>
         <div class="scene">
             <div class="cube">
                 <div class="cube__face cube__face--front" id="lastBlockHeight"></div>
